# 1ai-ebook

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  config.example.json  conftest.py  docker-compose.yml  ebook-api.service  ebook-generator.service  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_api.py  test_all_modes.py
.omc/: project-memory.json
.omc/handoffs/: team-plan.md
.omc/plans/: comics-pipeline-plan.md  ebook-improvements.md  improvement-plan.md  quality-upgrade-plan.md
.omc/sessions/: 42bc2992-8584-4481-9263-a59792d36f96.json  764df91e-ae2c-410b-a394-ecbdf59bf5dd.json  b65cfbd9-6d7e-48fd-aa83-643b89f8bd39.json  c07095e8-80d6-47a8-9dde-856b5c6b554d.json  c3f09d74-97fe-4c05-8d4e-c7576488cf86.json  fecb718a-2600-4453-a2fd-b535ac9767d6.json
.omc/test-results/: api-test.md  mcp-test.md
app/: AGENTS.md  main.py
app/pages/: 1_Idea_Research.py  1_📊_Idea_Research.py  2_Create_Ebook.py  2_✍️_Create_Ebook.py  3_Progress.py  3_📈_Progress.py  4_Export.py  4_📥_Export.py  5_Marketing_Kit.py  5_💰_Marketing_Kit.py  6_Settings.py  7_Integrations.py  7_🔗_Integrations.py  AGENTS.md
app/utils/: mobile_css.py
docker/: AGENTS.md  entrypoint.sh
docs/: api.md  architecture.md  logging-best-practices.md  security.md  testing.md
src/: AGENTS.md  ai_client.py  config.py  logger.py  utils.py
src/api/: server.py
src/cover/: AGENTS.md  cover_generator.py  html_cover_generator.py
tests/: AGENTS.md  coverage-baseline.txt  coverage-final.txt  test_ai_client.py  test_e2e_comics.py  test_e2e_quality.py
(+124 files in other folders)
