[project]
name = "ebook-generator"
version = "0.1.0"
description = "AI-powered ebook generation app with OmniRoute integration"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.3.0",
    "python-docx>=1.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
# Run with coverage: pytest --cov=src --cov-report=term-missing
# Minimum target: 80% line coverage (see tests/coverage-baseline.txt for baseline)
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
